# github-mcp-server

./: .env.example  .env.test.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY-AUDIT.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: mcp-tools.md
src/github_mcp_server/: __init__.py  server.py
src/github_mcp_server/config/: defaults.py
src/github_mcp_server/tools/: batch_operations.py  ci.py  issues.py  milestones.py  pulls.py
src/github_mcp_server/utils/: __init__.py  errors.py  formatter.py  github_client.py  types.py
tests/: README.md  conftest.py  test_batch_operations_unit.py  test_ci_unit.py  test_error_handling.py  test_issues_unit.py  test_milestones_unit.py  test_pulls_unit.py  test_security.py  test_setup.py
tests/integration/: __init__.py  conftest.py  test_batch_operations_integration.py  test_ci_integration.py  test_issues_integration.py  test_milestones_integration.py  test_pulls_integration.py
